delayed crawling complete

--- a/project/chrome_extension/package.json
+++ b/project/chrome_extension/package.json
@@ -1,6 +1,7 @@
 {
   "name": "project",
   "devDependencies": {
+    "@types/whatwg-fetch": "^0.0.33",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-web-extension": "^1.6.1",
     "typescript": "^3.9.5"
