--- a/project/save-mhtml/chrome_extension/package.json
+++ b/project/save-mhtml/chrome_extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "save-mhtml",
   "devDependencies": {
     "@types/whatwg-fetch": "^0.0.33",
     "parcel-bundler": "^1.12.4",
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@types/chrome": "^0.0.117",
-    "chrome-extension-async": "^3.4.1",
-    "pg": "^8.2.1"
+    "chrome-extension-async": "^3.4.1"
   }
 }
