--- a/project/helpers/api/package.json
+++ b/project/helpers/api/package.json
@@ -19,13 +19,18 @@
     "tslib": "^2.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "tsc && node dist/app.js",
     "build": "tsc",
     "start:dev": "pm2 start dist/app.js --watch --no-daemon"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.3.0",
+    "@shopify/jest-koa-mocks": "^2.2.3",
+    "@types/jest": "^26.0.5",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.1.0",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.3",
     "typescript": "^3.9.6"
-  }
+  }  
 }
