--- a/project/save-mhtml/chrome_extension/src/manifest.json
+++ b/project/save-mhtml/chrome_extension/src/manifest.json
@@ -35,6 +35,8 @@
     "pageCapture",
     "tabs",
     "storage",
-    "webNavigation"
+    "webNavigation",
+    "downloads",
+    "downloads.open"
   ]
 }
