--- a/project/helpers/api/package.json
+++ b/project/helpers/api/package.json
@@ -22,7 +22,8 @@
     "test": "jest",
     "start": "tsc && node dist/app.js",
     "build": "tsc",
-    "start:dev": "pm2 start dist/app.js --watch --no-daemon"
+    "start:dev": "pm2 start dist/app.js --watch --no-daemon",
+    "watch": "tsc --watch"
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.2.3",
@@ -32,5 +33,5 @@
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.6"
-  }  
+  }
 }
