--- a/project/save-mhtml/chrome_extension/package.json
+++ b/project/save-mhtml/chrome_extension/package.json
@@ -14,9 +14,12 @@
     "watch": "parcel watch src/manifest.json --no-hmr"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.3.0",
     "@types/chrome": "^0.0.117",
     "@types/jest": "^26.0.5",
     "@types/jquery": "^3.5.1",
+    "@types/mozilla-readability": "^0.2.0",
+    "@types/node": "^14.0.27",
     "chrome-extension-async": "^3.4.1",
     "jquery": "^3.5.1"
   }
