Evalu first done

--- a/node/.devcontainer/devcontainer.json
+++ b/node/.devcontainer/devcontainer.json
@@ -48,7 +48,7 @@
   // "shutdownAction": "none",
   // Uncomment the next line to run commands after the container is created - for example installing git.
   // "postCreateCommand": "apt-get update && apt-get install -y git",
-  "postCreateCommand": "yarn global add standard"
+  "postCreateCommand": "yarn global add pm2 standard"
   // Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
   // "remoteUser": "vscode"
 }
