--- a/node/.devcontainer/devcontainer.json
+++ b/node/.devcontainer/devcontainer.json
@@ -40,7 +40,8 @@
   // Add the IDs of extensions you want installed when the container is created.
   "extensions": [
     "chenxsan.vscode-standardjs",
-    "visualstudioexptteam.vscodeintellicode"
+    "visualstudioexptteam.vscodeintellicode",
+    "prisma.prisma"
   ],
   // Uncomment the next line if you want start specific services in your Docker Compose config.
   // "runServices": [],
